BUG: 82617

Crash when calling KApplication::quit().
The static deleters were being destructed first than SessionWidget object which was trying to use them in the destructor.

Thanks for the investigation work done by Waldo.

svn path=/trunk/kdewebdev/klinkstatus/; revision=387598